--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [configuration]
-email=w1k@andreyofficial.com
-password=ANDREA*thebest*1
-threadID=nortonandreev
+email=
+password=
+threadID=
 testThreadID=
 [information]
 version=2.9
